Bug 217936 - Add ee. javadoc property to execution environment file... Properties with empty values will be added to the property map.